commit save point

--- a/Counter/app/src/main/res/layout/activity_main.xml
+++ b/Counter/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/counterText"
+        android:id="@+id/counText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -47,7 +47,7 @@
         app:layout_constraintBottom_toTopOf="@id/plus"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/counterText" />
+        app:layout_constraintTop_toBottomOf="@id/counText" />
 
     <ImageView
         android:id="@+id/plus"
