--- a/Counter/app/src/main/res/layout-land/activity_main.xml
+++ b/Counter/app/src/main/res/layout-land/activity_main.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".MainActivity"
+    android:id="@+id/main">
 
     <TextView
         android:id="@+id/title"
@@ -14,58 +16,58 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintBottom_toTopOf="@id/countText"/>
 
     <TextView
-        android:id="@+id/counText"
+        android:id="@+id/countText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="12dp"
         android:text="0"
         android:textColor="#0553EE"
         android:textSize="64sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title"
-        app:layout_constraintBottom_toTopOf="@id/buttonsRow"
-        />
+        app:layout_constraintBottom_toTopOf="@id/minus"/>
 
-    <LinearLayout
-        android:id="@+id/buttonsRow"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <ImageView
+        android:id="@+id/plus"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:background="@drawable/border_textview"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonReset"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/buttonReset"
+        app:layout_constraintTop_toTopOf="@+id/buttonReset"
+        app:srcCompat="@drawable/add_2_24px" />
 
-        <ImageView
-            android:id="@+id/plus"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/border_textview"
-            app:srcCompat="@drawable/add_2_24px" />
+    <TextView
+        android:id="@+id/buttonReset"
+        android:layout_width="wrap_content"
+        android:layout_height="96dp"
+        android:background="@drawable/border_textview"
+        android:text="Azzerare"
+        android:gravity="center"
+        android:textSize="28sp"
+        android:paddingHorizontal="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/minus"
+        app:layout_constraintEnd_toStartOf="@+id/plus"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/minus"
+        app:layout_constraintTop_toTopOf="@+id/minus" />
 
-        <TextView
-            android:id="@+id/buttonReset"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/border_textview"
-            android:padding="12dp"
-            android:text="Azzerare"
-            android:textAlignment="center"
-            android:textSize="28sp" />
-
-        <ImageView
-            android:id="@+id/minus"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
-            android:background="@drawable/border_textview"
-            app:srcCompat="@drawable/remove_24px" />
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/minus"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:background="@drawable/border_textview"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/buttonReset"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/countText"
+        app:srcCompat="@drawable/remove_24px" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
