--- a/Counter/app/src/main/res/layout/activity_main.xml
+++ b/Counter/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".MainActivity">
 
     <TextView
@@ -22,42 +23,45 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/counText"
+        android:id="@+id/countText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:padding="12dp"
         android:text="0"
-        android:textSize="64sp"
         android:textColor="#0553EE"
+        android:textSize="64sp"
         app:layout_constraintBottom_toTopOf="@+id/buttonReset"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
-        app:layout_constraintVertical_bias="0.608" />
+        app:layout_constraintVertical_bias="0.31" />
 
     <TextView
         android:id="@+id/buttonReset"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="96dp"
         android:background="@drawable/border_textview"
+        android:gravity="center"
         android:text="Azzerare"
         android:textSize="36sp"
-        app:layout_constraintBottom_toTopOf="@id/plus"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/counText" />
+        app:layout_constraintBottom_toBottomOf="@+id/plus"
+        app:layout_constraintEnd_toStartOf="@+id/plus"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/minus"
+        app:layout_constraintTop_toTopOf="@+id/plus" />
 
     <ImageView
         android:id="@+id/plus"
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:background="@drawable/border_textview"
+        android:layout_marginTop="128dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/minus"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/buttonReset"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/buttonReset"
+        app:layout_constraintTop_toBottomOf="@id/countText"
         app:srcCompat="@drawable/add_2_24px" />
 
     <ImageView
@@ -65,12 +69,12 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:background="@drawable/border_textview"
-        app:layout_constraintBottom_toBottomOf="@+id/plus"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/plus"
-        app:layout_constraintTop_toTopOf="@+id/plus"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonReset"
+        app:layout_constraintEnd_toStartOf="@+id/buttonReset"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/buttonReset"
         app:srcCompat="@drawable/remove_24px" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
